# airbnb-agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
app/: activity_search.py  agent.py  airbnb_images.py  airbnb_search.py  config.py  content_enrichment.py  exceptions.py  flight_search.py  food_search.py  geocoding.py  intake.py  mcp_client.py  neighborhood_search.py  pipeline.py  prompt.py  schemas.py  search_agent.py  weather_data.py
app/agents/: activities.py  commute.py  curation.py  flights.py  food.py  neighborhood.py  slides.py  stays.py  weather.py
app/presentation/: __init__.py  deck_spec.py  formatters.py  layout_rules.py  motion_patterns.py  render_html.py  render_sections.py  scoring.py  style_presets.py
docs/: CHANGELOG.md  DOCS.md  PRD.md  REQUIREMENTS.md  SCENARIO_RUNBOOK.md  STARTER_PROMPT.md  TAVILY_WORKFLOW.md
docs/plans/: 2026-03-24-json-intake-design.md
docs/scenarios/: barcelona_business_roundtrip.json  buenos_aires_vacation_roundtrip.json  cape_town_family_roundtrip.json  denver_business_roundtrip.json  istanbul_workcation_roundtrip.json  kyoto_romantic_roundtrip.json  lisbon_workcation_roundtrip.json  marrakech_weekend_getaway_roundtrip.json  mexico_city_event_based_roundtrip.json  sydney_workcation_roundtrip.json
tests/: test_activities.py  test_airbnb_images.py  test_content_enrichment.py  test_flights.py  test_food.py  test_neighborhood.py  test_presentation.py  test_stays.py  test_tavily_controls.py  test_weather.py
